Add structured output support for extracting JSON data

--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -21,6 +21,8 @@
       url: /guides/embeddings
     - title: Error Handling
       url: /guides/error-handling
+    - title: Structured Output
+      url: /guides/structured-output
     - title: Models
       url: /guides/models
 - title: GitHub
