--- a/spec/fixtures/vcr_cassettes/chat_function_calling_gpt-4o-mini_can_use_tools_without_parameters.yml
+++ b/spec/fixtures/vcr_cassettes/chat_function_calling_gpt-4o-mini_can_use_tools_without_parameters.yml
@@ -6,7 +6,7 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"model":"gpt-4o-mini","messages":[{"role":"user","content":"What''s
-        the time in Wakanda? Answer in ISO 8601 format."}],"temperature":0.7,"stream":false,"tools":[{"type":"function","function":{"name":"current_time","description":"Gets
+        the time in Wakanda? Answer in ISO 8601 format, UTC timezone."}],"temperature":0.7,"stream":false,"tools":[{"type":"function","function":{"name":"current_time","description":"Gets
         the current time in Wakanda","parameters":{"type":"object","properties":{},"required":[]}}}],"tool_choice":"auto"}'
     headers:
       User-Agent:
@@ -25,7 +25,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Sun, 23 Mar 2025 20:45:59 GMT
+      - Mon, 24 Mar 2025 21:53:12 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -37,7 +37,7 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '989'
+      - '453'
       Openai-Version:
       - '2020-10-01'
       X-Ratelimit-Limit-Requests:
@@ -47,11 +47,11 @@ http_interactions:
       X-Ratelimit-Remaining-Requests:
       - '9999'
       X-Ratelimit-Remaining-Tokens:
-      - '199983'
+      - '199981'
       X-Ratelimit-Reset-Requests:
       - 8.64s
       X-Ratelimit-Reset-Tokens:
-      - 4ms
+      - 5ms
       X-Request-Id:
       - "<X_REQUEST_ID>"
       Strict-Transport-Security:
@@ -73,9 +73,9 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-BEMUgQrMtwcu7AqBtroHnnVZvINHA",
+          "id": "chatcmpl-BEk1HDrCd1JHbCFe17oj3g1YYnMmQ",
           "object": "chat.completion",
-          "created": 1742762758,
+          "created": 1742853191,
           "model": "gpt-4o-mini-2024-07-18",
           "choices": [
             {
@@ -85,7 +85,7 @@ http_interactions:
                 "content": null,
                 "tool_calls": [
                   {
-                    "id": "call_M7vR2E6FeGVnmxm69ygAOVI9",
+                    "id": "call_i0AEa2OVhnmj59JJFzxA2isr",
                     "type": "function",
                     "function": {
                       "name": "current_time",
@@ -101,9 +101,9 @@ http_interactions:
             }
           ],
           "usage": {
-            "prompt_tokens": 54,
+            "prompt_tokens": 57,
             "completion_tokens": 11,
-            "total_tokens": 65,
+            "total_tokens": 68,
             "prompt_tokens_details": {
               "cached_tokens": 0,
               "audio_tokens": 0
@@ -118,14 +118,14 @@ http_interactions:
           "service_tier": "default",
           "system_fingerprint": "fp_b8bc95a0ac"
         }
-  recorded_at: Sun, 23 Mar 2025 20:45:59 GMT
+  recorded_at: Mon, 24 Mar 2025 21:53:12 GMT
 - request:
     method: post
     uri: https://api.openai.com/v1/chat/completions
     body:
       encoding: UTF-8
       string: '{"model":"gpt-4o-mini","messages":[{"role":"user","content":"What''s
-        the time in Wakanda? Answer in ISO 8601 format."},{"role":"assistant","tool_calls":[{"id":"call_M7vR2E6FeGVnmxm69ygAOVI9","type":"function","function":{"name":"current_time","arguments":"{}"}}]},{"role":"tool","content":"2025-03-23T21:42:00+01:00","tool_call_id":"call_M7vR2E6FeGVnmxm69ygAOVI9"}],"temperature":0.7,"stream":false,"tools":[{"type":"function","function":{"name":"current_time","description":"Gets
+        the time in Wakanda? Answer in ISO 8601 format, UTC timezone."},{"role":"assistant","tool_calls":[{"id":"call_i0AEa2OVhnmj59JJFzxA2isr","type":"function","function":{"name":"current_time","arguments":"{}"}}]},{"role":"tool","content":"2025-03-23T20:42:00Z","tool_call_id":"call_i0AEa2OVhnmj59JJFzxA2isr"}],"temperature":0.7,"stream":false,"tools":[{"type":"function","function":{"name":"current_time","description":"Gets
         the current time in Wakanda","parameters":{"type":"object","properties":{},"required":[]}}}],"tool_choice":"auto"}'
     headers:
       User-Agent:
@@ -144,7 +144,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Sun, 23 Mar 2025 20:46:00 GMT
+      - Mon, 24 Mar 2025 21:53:13 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -156,7 +156,7 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '806'
+      - '514'
       Openai-Version:
       - '2020-10-01'
       X-Ratelimit-Limit-Requests:
@@ -166,9 +166,9 @@ http_interactions:
       X-Ratelimit-Remaining-Requests:
       - '9998'
       X-Ratelimit-Remaining-Tokens:
-      - '199976'
+      - '199973'
       X-Ratelimit-Reset-Requests:
-      - 12.771s
+      - 16.639s
       X-Ratelimit-Reset-Tokens:
       - 7ms
       X-Request-Id:
@@ -192,16 +192,16 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-BEMUhrcIGdRBw7mvbSihoAlOTYknS",
+          "id": "chatcmpl-BEk1IUzbcTIfMx2LURwD6OPZKKu19",
           "object": "chat.completion",
-          "created": 1742762759,
+          "created": 1742853192,
           "model": "gpt-4o-mini-2024-07-18",
           "choices": [
             {
               "index": 0,
               "message": {
                 "role": "assistant",
-                "content": "The current time in Wakanda is 2025-03-23T21:42:00+01:00.",
+                "content": "The current time in Wakanda is 2025-03-23T20:42:00Z (UTC).",
                 "refusal": null,
                 "annotations": []
               },
@@ -211,8 +211,8 @@ http_interactions:
           ],
           "usage": {
             "prompt_tokens": 88,
-            "completion_tokens": 27,
-            "total_tokens": 115,
+            "completion_tokens": 26,
+            "total_tokens": 114,
             "prompt_tokens_details": {
               "cached_tokens": 0,
               "audio_tokens": 0
@@ -227,5 +227,5 @@ http_interactions:
           "service_tier": "default",
           "system_fingerprint": "fp_b8bc95a0ac"
         }
-  recorded_at: Sun, 23 Mar 2025 20:46:00 GMT
+  recorded_at: Mon, 24 Mar 2025 21:53:13 GMT
 recorded_with: VCR 6.3.1
