--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -23,6 +23,8 @@
       url: /guides/error-handling
     - title: Structured Output
       url: /guides/structured-output
+    - title: Custom Parsers
+      url: /guides/custom-parsers
     - title: Models
       url: /guides/models
 - title: GitHub
