Enhance embed functionality to support dimensions
Updated the embedding methods in both OpenAI and Gemini providers to
accept an optional 'dimensions' parameter. This allows users to
specify the dimensionality of the embeddings.
Added corresponding tests to ensure functionality for both single and
multiple text inputs with custom dimensions.

--- a/spec/fixtures/vcr_cassettes/embedding_basic_functionality_gemini_text-embedding-004_can_handle_a_single_text_with_custom_dimensions.yml
+++ b/spec/fixtures/vcr_cassettes/embedding_basic_functionality_gemini_text-embedding-004_can_handle_a_single_text_with_custom_dimensions.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://generativelanguage.googleapis.com/v1beta/models/text-embedding-004:embedContent
     body:
       encoding: UTF-8
-      string: '{"content":{"parts":[{"text":"Ruby is a programmer''s best friend"}]}}'
+      string: '{"content":{"parts":[{"text":"Ruby is a programmer''s best friend"}]},"outputDimensionality":768}'
     headers:
       User-Agent:
       - Faraday v2.12.2
@@ -39,7 +39,7 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       Server-Timing:
-      - gfet4t7; dur=239
+      - gfet4t7; dur=238
       Alt-Svc:
       - h3=":443"; ma=2592000,h3-29=":443"; ma=2592000
       Transfer-Encoding:
@@ -821,5 +821,5 @@ http_interactions:
             ]
           }
         }
-  recorded_at: Thu, 03 Apr 2025 15:13:34 GMT
+  recorded_at: Thu, 03 Apr 2025 15:13:35 GMT
 recorded_with: VCR 6.3.1
