--- a/spec/fixtures/vcr_cassettes/embedding_basic_functionality_gemini_text-embedding-004_can_handle_multiple_texts_with_custom_dimensions.yml
+++ b/spec/fixtures/vcr_cassettes/embedding_basic_functionality_gemini_text-embedding-004_can_handle_multiple_texts_with_custom_dimensions.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://generativelanguage.googleapis.com/v1beta/models/text-embedding-004:embedContent
     body:
       encoding: UTF-8
-      string: '{"content":{"parts":[{"text":"Ruby"}]}}'
+      string: '{"content":{"parts":[{"text":"Ruby"}]},"outputDimensionality":768}'
     headers:
       User-Agent:
       - Faraday v2.12.2
@@ -29,7 +29,7 @@ http_interactions:
       - Referer
       - X-Origin
       Date:
-      - Thu, 03 Apr 2025 15:13:35 GMT
+      - Thu, 03 Apr 2025 15:13:36 GMT
       Server:
       - scaffolding on HTTPServer2
       X-Xss-Protection:
@@ -39,7 +39,7 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       Server-Timing:
-      - gfet4t7; dur=359
+      - gfet4t7; dur=239
       Alt-Svc:
       - h3=":443"; ma=2592000,h3-29=":443"; ma=2592000
       Transfer-Encoding:
@@ -821,13 +821,13 @@ http_interactions:
             ]
           }
         }
-  recorded_at: Thu, 03 Apr 2025 15:13:35 GMT
+  recorded_at: Thu, 03 Apr 2025 15:13:36 GMT
 - request:
     method: post
     uri: https://generativelanguage.googleapis.com/v1beta/models/text-embedding-004:embedContent
     body:
       encoding: UTF-8
-      string: '{"content":{"parts":[{"text":"Python"}]}}'
+      string: '{"content":{"parts":[{"text":"Python"}]},"outputDimensionality":768}'
     headers:
       User-Agent:
       - Faraday v2.12.2
@@ -851,7 +851,7 @@ http_interactions:
       - Referer
       - X-Origin
       Date:
-      - Thu, 03 Apr 2025 15:13:35 GMT
+      - Thu, 03 Apr 2025 15:13:36 GMT
       Server:
       - scaffolding on HTTPServer2
       X-Xss-Protection:
@@ -861,7 +861,7 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       Server-Timing:
-      - gfet4t7; dur=342
+      - gfet4t7; dur=232
       Alt-Svc:
       - h3=":443"; ma=2592000,h3-29=":443"; ma=2592000
       Transfer-Encoding:
@@ -1643,13 +1643,13 @@ http_interactions:
             ]
           }
         }
-  recorded_at: Thu, 03 Apr 2025 15:13:35 GMT
+  recorded_at: Thu, 03 Apr 2025 15:13:36 GMT
 - request:
     method: post
     uri: https://generativelanguage.googleapis.com/v1beta/models/text-embedding-004:embedContent
     body:
       encoding: UTF-8
-      string: '{"content":{"parts":[{"text":"JavaScript"}]}}'
+      string: '{"content":{"parts":[{"text":"JavaScript"}]},"outputDimensionality":768}'
     headers:
       User-Agent:
       - Faraday v2.12.2
@@ -1673,7 +1673,7 @@ http_interactions:
       - Referer
       - X-Origin
       Date:
-      - Thu, 03 Apr 2025 15:13:36 GMT
+      - Thu, 03 Apr 2025 15:13:37 GMT
       Server:
       - scaffolding on HTTPServer2
       X-Xss-Protection:
@@ -1683,7 +1683,7 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       Server-Timing:
-      - gfet4t7; dur=235
+      - gfet4t7; dur=255
       Alt-Svc:
       - h3=":443"; ma=2592000,h3-29=":443"; ma=2592000
       Transfer-Encoding:
@@ -2465,5 +2465,5 @@ http_interactions:
             ]
           }
         }
-  recorded_at: Thu, 03 Apr 2025 15:13:36 GMT
+  recorded_at: Thu, 03 Apr 2025 15:13:37 GMT
 recorded_with: VCR 6.3.1
