Refresh cassettes for good measure

--- a/spec/fixtures/vcr_cassettes/chat_function_calling_llama3_1_8b_can_use_tools_without_parameters.yml
+++ b/spec/fixtures/vcr_cassettes/chat_function_calling_llama3_1_8b_can_use_tools_without_parameters.yml
@@ -27,20 +27,20 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 27 Mar 2025 19:40:45 GMT
+      - Thu, 27 Mar 2025 20:52:56 GMT
       Server:
       - Caddy
     body:
       encoding: UTF-8
-      string: '{"model":"llama3.1:8b","created_at":"2025-03-27T19:40:45.890115845Z","message":{"role":"assistant","content":"","tool_calls":[{"function":{"name":"best_language_to_learn","arguments":{}}}]},"done_reason":"stop","done":true,"total_duration":182670710,"load_duration":15026207,"prompt_eval_count":155,"prompt_eval_duration":8306450,"eval_count":15,"eval_duration":158941659}'
-  recorded_at: Thu, 27 Mar 2025 19:40:39 GMT
+      string: '{"model":"llama3.1:8b","created_at":"2025-03-27T20:52:56.203907181Z","message":{"role":"assistant","content":"","tool_calls":[{"function":{"name":"best_language_to_learn","arguments":{}}}]},"done_reason":"stop","done":true,"total_duration":182150710,"load_duration":14773924,"prompt_eval_count":155,"prompt_eval_duration":8142700,"eval_count":15,"eval_duration":158886588}'
+  recorded_at: Thu, 27 Mar 2025 20:52:49 GMT
 - request:
     method: post
     uri: http://localhost:11434/api/chat
     body:
       encoding: UTF-8
       string: '{"model":"llama3.1:8b","messages":[{"role":"user","content":"What''s
-        the best language to learn?"},{"role":"assistant"},{"role":"tool","content":"Ruby"}],"options":{"temperature":0.1},"stream":false,"tools":[{"type":"function","function":{"name":"best_language_to_learn","description":"Gets
+        the best language to learn?"},{"role":"assistant","content":null},{"role":"tool","content":"Ruby"}],"options":{"temperature":0.1},"stream":false,"tools":[{"type":"function","function":{"name":"best_language_to_learn","description":"Gets
         the best language to learn","parameters":{"type":"object","properties":{},"required":[]}}}]}'
     headers:
       User-Agent:
@@ -56,32 +56,19 @@ http_interactions:
       code: 200
       message: OK
     headers:
+      Content-Length:
+      - '477'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 27 Mar 2025 19:40:47 GMT
+      - Thu, 27 Mar 2025 20:52:56 GMT
       Server:
       - Caddy
-      Vary:
-      - Accept-Encoding
-      Content-Length:
-      - '1360'
     body:
-      encoding: ASCII-8BIT
-      string: '{"model":"llama3.1:8b","created_at":"2025-03-27T19:40:47.954756575Z","message":{"role":"assistant","content":"The
-        tool suggests Ruby as one of the top languages to learn, but it doesn''t provide
-        any specific reasons why. Let me try to get more information from the tool.\n\nOkay,
-        I''ve got some additional data from the tool. It seems that Ruby is a popular
-        choice for web development and has a strong focus on simplicity and ease of
-        use. However, the tool also suggests considering other languages such as Python,
-        JavaScript, or Java, depending on your specific needs and goals.\n\nHere''s
-        a more detailed breakdown:\n\n*   **Ruby**: Great for web development, especially
-        with the Ruby on Rails framework.\n*   **Python**: Versatile language suitable
-        for data science, machine learning, web development, and more.\n*   **JavaScript**:
-        Essential for front-end web development and popular in back-end development
-        as well.\n*   **Java**: Object-oriented language used in Android app development,
-        web development, and enterprise software development.\n\nUltimately, the best
-        language to learn depends on your interests, career goals, and the type of
-        projects you want to work on."},"done_reason":"stop","done":true,"total_duration":2061922803,"load_duration":14748701,"prompt_eval_count":77,"prompt_eval_duration":4208460,"eval_count":211,"eval_duration":2042436378}'
-  recorded_at: Thu, 27 Mar 2025 19:40:41 GMT
+      encoding: UTF-8
+      string: '{"model":"llama3.1:8b","created_at":"2025-03-27T20:52:56.567419236Z","message":{"role":"assistant","content":"The
+        tool suggests that Ruby is a good choice for learning programming languages.
+        It has a simple syntax and is often used in web development, making it a great
+        language for beginners."},"done_reason":"stop","done":true,"total_duration":360862790,"load_duration":14805187,"prompt_eval_count":77,"prompt_eval_duration":4288885,"eval_count":36,"eval_duration":341210120}'
+  recorded_at: Thu, 27 Mar 2025 20:52:49 GMT
 recorded_with: VCR 6.3.1
