--- a/spec/fixtures/vcr_cassettes/chat_streaming_responses_llama3_1_8b_supports_streaming_responses.yml
+++ b/spec/fixtures/vcr_cassettes/chat_streaming_responses_llama3_1_8b_supports_streaming_responses.yml
@@ -6,7 +6,7 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"model":"llama3.1:8b","messages":[{"role":"user","content":"Count
-        from 1 to 3","images":[]}],"options":{"temperature":0.7},"stream":true,"tools":[]}'
+        from 1 to 3"}],"options":{"temperature":0.7},"stream":true,"tools":[]}'
     headers:
       User-Agent:
       - Faraday v2.12.2
@@ -24,7 +24,7 @@ http_interactions:
       Content-Type:
       - application/x-ndjson
       Date:
-      - Thu, 27 Mar 2025 20:15:12 GMT
+      - Thu, 27 Mar 2025 20:52:54 GMT
       Server:
       - Caddy
       Transfer-Encoding:
@@ -32,15 +32,18 @@ http_interactions:
     body:
       encoding: UTF-8
       string: |
-        {"model":"llama3.1:8b","created_at":"2025-03-27T20:15:12.823627546Z","message":{"role":"assistant","content":"Here"},"done":false}
-        {"model":"llama3.1:8b","created_at":"2025-03-27T20:15:12.836926583Z","message":{"role":"assistant","content":" it"},"done":false}
-        {"model":"llama3.1:8b","created_at":"2025-03-27T20:15:12.845628305Z","message":{"role":"assistant","content":" is"},"done":false}
-        {"model":"llama3.1:8b","created_at":"2025-03-27T20:15:12.854520068Z","message":{"role":"assistant","content":":\n\n"},"done":false}
-        {"model":"llama3.1:8b","created_at":"2025-03-27T20:15:12.863223164Z","message":{"role":"assistant","content":"1"},"done":false}
-        {"model":"llama3.1:8b","created_at":"2025-03-27T20:15:12.871980804Z","message":{"role":"assistant","content":"\n"},"done":false}
-        {"model":"llama3.1:8b","created_at":"2025-03-27T20:15:12.880710143Z","message":{"role":"assistant","content":"2"},"done":false}
-        {"model":"llama3.1:8b","created_at":"2025-03-27T20:15:12.889518343Z","message":{"role":"assistant","content":"\n"},"done":false}
-        {"model":"llama3.1:8b","created_at":"2025-03-27T20:15:12.89843357Z","message":{"role":"assistant","content":"3"},"done":false}
-        {"model":"llama3.1:8b","created_at":"2025-03-27T20:15:12.907436856Z","message":{"role":"assistant","content":""},"done_reason":"stop","done":true,"total_duration":3301695608,"load_duration":3125133401,"prompt_eval_count":17,"prompt_eval_duration":88101212,"eval_count":10,"eval_duration":86549601}
-  recorded_at: Thu, 27 Mar 2025 20:15:06 GMT
+        {"model":"llama3.1:8b","created_at":"2025-03-27T20:52:54.711670439Z","message":{"role":"assistant","content":"Here"},"done":false}
+        {"model":"llama3.1:8b","created_at":"2025-03-27T20:52:54.722005791Z","message":{"role":"assistant","content":" it"},"done":false}
+        {"model":"llama3.1:8b","created_at":"2025-03-27T20:52:54.730875308Z","message":{"role":"assistant","content":" goes"},"done":false}
+        {"model":"llama3.1:8b","created_at":"2025-03-27T20:52:54.73973626Z","message":{"role":"assistant","content":":\n\n"},"done":false}
+        {"model":"llama3.1:8b","created_at":"2025-03-27T20:52:54.748715477Z","message":{"role":"assistant","content":"1"},"done":false}
+        {"model":"llama3.1:8b","created_at":"2025-03-27T20:52:54.757750051Z","message":{"role":"assistant","content":","},"done":false}
+        {"model":"llama3.1:8b","created_at":"2025-03-27T20:52:54.766838327Z","message":{"role":"assistant","content":" "},"done":false}
+        {"model":"llama3.1:8b","created_at":"2025-03-27T20:52:54.775953172Z","message":{"role":"assistant","content":"2"},"done":false}
+        {"model":"llama3.1:8b","created_at":"2025-03-27T20:52:54.784999128Z","message":{"role":"assistant","content":","},"done":false}
+        {"model":"llama3.1:8b","created_at":"2025-03-27T20:52:54.794182418Z","message":{"role":"assistant","content":" "},"done":false}
+        {"model":"llama3.1:8b","created_at":"2025-03-27T20:52:54.803269803Z","message":{"role":"assistant","content":"3"},"done":false}
+        {"model":"llama3.1:8b","created_at":"2025-03-27T20:52:54.812379489Z","message":{"role":"assistant","content":"!"},"done":false}
+        {"model":"llama3.1:8b","created_at":"2025-03-27T20:52:54.821504569Z","message":{"role":"assistant","content":""},"done_reason":"stop","done":true,"total_duration":143359811,"load_duration":17391722,"prompt_eval_count":17,"prompt_eval_duration":3802940,"eval_count":13,"eval_duration":121838818}
+  recorded_at: Thu, 27 Mar 2025 20:52:48 GMT
 recorded_with: VCR 6.3.1
