--- a/spec/fixtures/vcr_cassettes/chat_vision_models_granite3_2-vision_2b_can_understand_images.yml
+++ b/spec/fixtures/vcr_cassettes/chat_vision_models_granite3_2-vision_2b_can_understand_images.yml
@@ -22,16 +22,16 @@ http_interactions:
       message: OK
     headers:
       Content-Length:
-      - '380'
+      - '374'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 27 Mar 2025 20:10:23 GMT
+      - Thu, 27 Mar 2025 20:52:50 GMT
       Server:
       - Caddy
     body:
       encoding: UTF-8
-      string: '{"model":"granite3.2-vision:2b","created_at":"2025-03-27T20:10:23.42586545Z","message":{"role":"assistant","content":"\nI
-        see a red diamond-like object with a white center on a black background."},"done_reason":"stop","done":true,"total_duration":165572248,"load_duration":6699362,"prompt_eval_count":2242,"prompt_eval_duration":24375911,"eval_count":20,"eval_duration":133708153}'
-  recorded_at: Thu, 27 Mar 2025 20:10:16 GMT
+      string: '{"model":"granite3.2-vision:2b","created_at":"2025-03-27T20:52:50.595761025Z","message":{"role":"assistant","content":"\nI
+        see a large red diamond with sharp angles and a smooth surface."},"done_reason":"stop","done":true,"total_duration":552064725,"load_duration":10092978,"prompt_eval_count":2242,"prompt_eval_duration":425090887,"eval_count":18,"eval_duration":115966422}'
+  recorded_at: Thu, 27 Mar 2025 20:52:43 GMT
 recorded_with: VCR 6.3.1
