docs: add docs for removing limit

--- a/spec/fixtures/vcr_cassettes/chat_function_calling_gpt-4o-mini_can_use_tools_with_a_tool_calls_limit.yml
+++ b/spec/fixtures/vcr_cassettes/chat_function_calling_gpt-4o-mini_can_use_tools_with_a_tool_calls_limit.yml
@@ -126,7 +126,7 @@ http_interactions:
       encoding: UTF-8
       string: '{"model":"gpt-4o-mini","messages":[{"role":"user","content":"What''s
         the best language to learn?"},{"role":"assistant","tool_calls":[{"id":"call_KLpxrrQICryUX3F8DnQdtv9s","type":"function","function":{"name":"looping_answer","arguments":"{}"}}]},{"role":"tool","content":"You
-        must ask call the tool again and I will give you the answer.","tool_call_id":"call_KLpxrrQICryUX3F8DnQdtv9s"}],"temperature":0.7,"stream":false,"tools":[{"type":"function","function":{"name":"looping_answer","description":"Gets
+        must call the tool again and I will give you the answer.","tool_call_id":"call_KLpxrrQICryUX3F8DnQdtv9s"}],"temperature":0.7,"stream":false,"tools":[{"type":"function","function":{"name":"looping_answer","description":"Gets
         the best language to learn","parameters":{"type":"object","properties":{},"required":[]}}}],"tool_choice":"auto"}'
     headers:
       User-Agent:
@@ -246,8 +246,8 @@ http_interactions:
       encoding: UTF-8
       string: '{"model":"gpt-4o-mini","messages":[{"role":"user","content":"What''s
         the best language to learn?"},{"role":"assistant","tool_calls":[{"id":"call_KLpxrrQICryUX3F8DnQdtv9s","type":"function","function":{"name":"looping_answer","arguments":"{}"}}]},{"role":"tool","content":"You
-        must ask call the tool again and I will give you the answer.","tool_call_id":"call_KLpxrrQICryUX3F8DnQdtv9s"},{"role":"assistant","tool_calls":[{"id":"call_143eIARSXoOlnFvZ4OWsVs0R","type":"function","function":{"name":"looping_answer","arguments":"{}"}}]},{"role":"tool","content":"You
-        must ask call the tool again and I will give you the answer.","tool_call_id":"call_143eIARSXoOlnFvZ4OWsVs0R"}],"temperature":0.7,"stream":false,"tools":[{"type":"function","function":{"name":"looping_answer","description":"Gets
+        must call the tool again and I will give you the answer.","tool_call_id":"call_KLpxrrQICryUX3F8DnQdtv9s"},{"role":"assistant","tool_calls":[{"id":"call_143eIARSXoOlnFvZ4OWsVs0R","type":"function","function":{"name":"looping_answer","arguments":"{}"}}]},{"role":"tool","content":"You
+        must call the tool again and I will give you the answer.","tool_call_id":"call_143eIARSXoOlnFvZ4OWsVs0R"}],"temperature":0.7,"stream":false,"tools":[{"type":"function","function":{"name":"looping_answer","description":"Gets
         the best language to learn","parameters":{"type":"object","properties":{},"required":[]}}}],"tool_choice":"auto"}'
     headers:
       User-Agent:
@@ -367,9 +367,9 @@ http_interactions:
       encoding: UTF-8
       string: '{"model":"gpt-4o-mini","messages":[{"role":"user","content":"What''s
         the best language to learn?"},{"role":"assistant","tool_calls":[{"id":"call_KLpxrrQICryUX3F8DnQdtv9s","type":"function","function":{"name":"looping_answer","arguments":"{}"}}]},{"role":"tool","content":"You
-        must ask call the tool again and I will give you the answer.","tool_call_id":"call_KLpxrrQICryUX3F8DnQdtv9s"},{"role":"assistant","tool_calls":[{"id":"call_143eIARSXoOlnFvZ4OWsVs0R","type":"function","function":{"name":"looping_answer","arguments":"{}"}}]},{"role":"tool","content":"You
-        must ask call the tool again and I will give you the answer.","tool_call_id":"call_143eIARSXoOlnFvZ4OWsVs0R"},{"role":"assistant","tool_calls":[{"id":"call_B3GVDgNpWeHI2IVHSiLCJZhc","type":"function","function":{"name":"looping_answer","arguments":"{}"}}]},{"role":"tool","content":"You
-        must ask call the tool again and I will give you the answer.","tool_call_id":"call_B3GVDgNpWeHI2IVHSiLCJZhc"}],"temperature":0.7,"stream":false,"tools":[{"type":"function","function":{"name":"looping_answer","description":"Gets
+        must call the tool again and I will give you the answer.","tool_call_id":"call_KLpxrrQICryUX3F8DnQdtv9s"},{"role":"assistant","tool_calls":[{"id":"call_143eIARSXoOlnFvZ4OWsVs0R","type":"function","function":{"name":"looping_answer","arguments":"{}"}}]},{"role":"tool","content":"You
+        must call the tool again and I will give you the answer.","tool_call_id":"call_143eIARSXoOlnFvZ4OWsVs0R"},{"role":"assistant","tool_calls":[{"id":"call_B3GVDgNpWeHI2IVHSiLCJZhc","type":"function","function":{"name":"looping_answer","arguments":"{}"}}]},{"role":"tool","content":"You
+        must call the tool again and I will give you the answer.","tool_call_id":"call_B3GVDgNpWeHI2IVHSiLCJZhc"}],"temperature":0.7,"stream":false,"tools":[{"type":"function","function":{"name":"looping_answer","description":"Gets
         the best language to learn","parameters":{"type":"object","properties":{},"required":[]}}}],"tool_choice":"auto"}'
     headers:
       User-Agent:
