--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Deploy docs
 
 on:
   push:
-    branches: [main, examples] # Adding `examples` only for testing. Remove later!
+    branches: [main]
     paths:
       - 'docs/**'
       - 'lib/**'
