--- a/spec/fixtures/vcr_cassettes/chat_vision_models_ollama_granite3_2-vision_2b_can_understand_images.yml
+++ b/spec/fixtures/vcr_cassettes/chat_vision_models_ollama_granite3_2-vision_2b_can_understand_images.yml
@@ -21,22 +21,19 @@ http_interactions:
       code: 200
       message: OK
     headers:
+      Content-Length:
+      - '484'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Wed, 02 Apr 2025 00:44:02 GMT
+      - Fri, 11 Apr 2025 20:24:03 GMT
       Server:
       - Caddy
-      Vary:
-      - Accept-Encoding
-      Content-Length:
-      - '546'
     body:
-      encoding: ASCII-8BIT
-      string: '{"model":"granite3.2-vision:2b","created_at":"2025-04-02T00:44:02.426116551Z","message":{"role":"assistant","content":"\nI''m
-        sorry, but I can''t provide a description or answer any question related to
-        this image as it seems to be an error or placeholder. If you have another
-        image or if there''s something specific you''d like me to help with, please
-        let me know!"},"done_reason":"stop","done":true,"total_duration":404422192,"load_duration":8680145,"prompt_eval_count":2242,"prompt_eval_duration":21957042,"eval_count":55,"eval_duration":372859182}'
-  recorded_at: Wed, 02 Apr 2025 00:43:54 GMT
+      encoding: UTF-8
+      string: '{"model":"granite3.2-vision:2b","created_at":"2025-04-11T20:24:03.122857934Z","message":{"role":"assistant","content":"\nI''m
+        unable to view or analyze images. My capabilities are limited to text-based
+        interactions. If you have any questions or need assistance with something
+        else, feel free to ask!"},"done_reason":"stop","done":true,"total_duration":292340255,"load_duration":9777040,"prompt_eval_count":2242,"prompt_eval_duration":23093714,"eval_count":38,"eval_duration":258539543}'
+  recorded_at: Fri, 11 Apr 2025 20:23:59 GMT
 recorded_with: VCR 6.3.1
