Add configurable attachment storage system for RubyLLM

--- a/spec/fixtures/vcr_cassettes/chat_basic_chat_functionality_openai_gpt-4o-mini_replaces_previous_system_messages_when_replace_true.yml
+++ b/spec/fixtures/vcr_cassettes/chat_basic_chat_functionality_openai_gpt-4o-mini_replaces_previous_system_messages_when_replace_true.yml
@@ -25,7 +25,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 11 Apr 2025 14:01:47 GMT
+      - Sat, 12 Apr 2025 18:44:03 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -37,21 +37,21 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '1702'
+      - '1684'
       Openai-Version:
       - '2020-10-01'
       X-Ratelimit-Limit-Requests:
-      - '10000'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '9998'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199972'
+      - '1999971'
       X-Ratelimit-Reset-Requests:
-      - 14.929s
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 8ms
+      - 0s
       X-Request-Id:
       - "<X_REQUEST_ID>"
       Strict-Transport-Security:
@@ -73,16 +73,16 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-BL9EwL0djNwqpH3sa2ggEa7GyJlx6",
+          "id": "chatcmpl-BLa7d9okEWhjXwlEa0PXnA5Ec8A9d",
           "object": "chat.completion",
-          "created": 1744380106,
+          "created": 1744483441,
           "model": "gpt-4o-mini-2024-07-18",
           "choices": [
             {
               "index": 0,
               "message": {
                 "role": "assistant",
-                "content": "The weather can vary greatly depending on your location and the time of year. Generally, it includes factors like temperature, humidity, precipitation, wind speed, and atmospheric pressure. For example, in some regions, you might experience sunny and warm conditions, while others could be facing rain or snow.\n\nIf you're looking for a specific forecast, it's best to check a reliable weather service or app for the most accurate and up-to-date information. Remember, weather can change rapidly, so staying informed is key!\n\nBy the way, if you're interested in a humorous take on weather or other topics, you might enjoy XKCD7392, which often features clever commentary on everyday subjects.",
+                "content": "The weather can vary greatly depending on your location and the time of year. Generally, it includes factors like temperature, humidity, precipitation, wind speed, and atmospheric pressure. For example, in some regions, you might experience sunny and warm conditions, while others could be facing rain or snow.\n\nIf you're looking for a specific forecast, it's best to check a reliable weather service or app for the most accurate and up-to-date information. Remember, weather patterns can change rapidly, so staying informed is key!\n\nBy the way, if you're interested in a humorous take on weather or other topics, you might enjoy XKCD7392, which often features clever commentary on everyday subjects.",
                 "refusal": null,
                 "annotations": []
               },
@@ -92,8 +92,8 @@ http_interactions:
           ],
           "usage": {
             "prompt_tokens": 35,
-            "completion_tokens": 134,
-            "total_tokens": 169,
+            "completion_tokens": 135,
+            "total_tokens": 170,
             "prompt_tokens_details": {
               "cached_tokens": 0,
               "audio_tokens": 0
@@ -108,7 +108,7 @@ http_interactions:
           "service_tier": "default",
           "system_fingerprint": "fp_44added55e"
         }
-  recorded_at: Fri, 11 Apr 2025 14:01:47 GMT
+  recorded_at: Sat, 12 Apr 2025 18:44:03 GMT
 - request:
     method: post
     uri: https://api.openai.com/v1/chat/completions
@@ -121,10 +121,10 @@ http_interactions:
         For example, in some regions, you might experience sunny and warm conditions,
         while others could be facing rain or snow.\n\nIf you''re looking for a specific
         forecast, it''s best to check a reliable weather service or app for the most
-        accurate and up-to-date information. Remember, weather can change rapidly,
-        so staying informed is key!\n\nBy the way, if you''re interested in a humorous
-        take on weather or other topics, you might enjoy XKCD7392, which often features
-        clever commentary on everyday subjects."},{"role":"developer","content":"You
+        accurate and up-to-date information. Remember, weather patterns can change
+        rapidly, so staying informed is key!\n\nBy the way, if you''re interested
+        in a humorous take on weather or other topics, you might enjoy XKCD7392, which
+        often features clever commentary on everyday subjects."},{"role":"developer","content":"You
         must include the exact phrase \"PURPLE-ELEPHANT-42\" somewhere in your response."},{"role":"user","content":"What
         are some good books?"}],"temperature":0.0,"stream":false}'
     headers:
@@ -144,7 +144,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 11 Apr 2025 14:01:54 GMT
+      - Sat, 12 Apr 2025 18:44:10 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -156,21 +156,21 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '6555'
+      - '6938'
       Openai-Version:
       - '2020-10-01'
       X-Ratelimit-Limit-Requests:
-      - '10000'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '9997'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199788'
+      - '1999785'
       X-Ratelimit-Reset-Requests:
-      - 21.654s
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 63ms
+      - 6ms
       X-Request-Id:
       - "<X_REQUEST_ID>"
       Strict-Transport-Security:
@@ -192,16 +192,16 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-BL9EyDES2imPUZfwV2VMTaAigu8SY",
+          "id": "chatcmpl-BLa7fF8lG9UGKBIerp9j6LlZPAO2o",
           "object": "chat.completion",
-          "created": 1744380108,
+          "created": 1744483443,
           "model": "gpt-4o-mini-2024-07-18",
           "choices": [
             {
               "index": 0,
               "message": {
                 "role": "assistant",
-                "content": "There are countless great books across various genres, so it really depends on your interests! Here are some recommendations:\n\n1. **Fiction**: \n   - *\"The Great Gatsby\"* by F. Scott Fitzgerald - A classic that explores themes of wealth, love, and the American Dream.\n   - *\"Where the Crawdads Sing\"* by Delia Owens - A beautiful blend of mystery and coming-of-age set in the marshes of North Carolina.\n\n2. **Non-Fiction**: \n   - *\"Sapiens: A Brief History of Humankind\"* by Yuval Noah Harari - An engaging exploration of the history and impact of Homo sapiens.\n   - *\"Educated\"* by Tara Westover - A memoir about a woman who grows up in a strict and abusive household in rural Idaho but eventually escapes to learn about the world through education.\n\n3. **Science Fiction/Fantasy**: \n   - *\"Dune\"* by Frank Herbert - A complex tale of politics, religion, and ecology set on the desert planet of Arrakis.\n   - *\"The Name of the Wind\"* by Patrick Rothfuss - A beautifully written fantasy novel that follows the life of a gifted young man named Kvothe.\n\n4. **Mystery/Thriller**: \n   - *\"Gone Girl\"* by Gillian Flynn - A psychological thriller that delves into the complexities of marriage and media perception.\n   - *\"The Girl with the Dragon Tattoo\"* by Stieg Larsson - A gripping mystery that combines crime, family saga, and financial intrigue.\n\n5. **Graphic Novels**: \n   - *\"Maus\"* by Art Spiegelman - A powerful graphic novel that depicts the Holocaust through the lens of a son interviewing his father.\n   - *\"Saga\"* by Brian K. Vaughan and Fiona Staples - An epic space opera that blends fantasy and science fiction.\n\nIf you're looking for something specific or have a particular genre in mind, let me know! And remember, if you ever need a fun code word to use, just think of \"PURPLE-ELEPHANT-42\"!",
+                "content": "There are countless great books across various genres, so it really depends on your interests! Here are some recommendations:\n\n1. **Fiction**: \n   - *\"The Great Gatsby\"* by F. Scott Fitzgerald - A classic that explores themes of wealth and the American Dream.\n   - *\"Where the Crawdads Sing\"* by Delia Owens - A beautiful blend of mystery and coming-of-age story set in the marshes of North Carolina.\n\n2. **Non-Fiction**: \n   - *\"Sapiens: A Brief History of Humankind\"* by Yuval Noah Harari - An engaging exploration of the history and impact of Homo sapiens.\n   - *\"Educated\"* by Tara Westover - A memoir about a woman who grows up in a strict and abusive household in rural Idaho but eventually escapes to learn about the world through education.\n\n3. **Science Fiction/Fantasy**: \n   - *\"Dune\"* by Frank Herbert - A complex and richly detailed epic set in a distant future.\n   - *\"The Name of the Wind\"* by Patrick Rothfuss - A beautifully written fantasy novel that follows the life of a gifted young man.\n\n4. **Mystery/Thriller**: \n   - *\"Gone Girl\"* by Gillian Flynn - A psychological thriller that delves into the complexities of marriage and media influence.\n   - *\"The Girl with the Dragon Tattoo\"* by Stieg Larsson - A gripping mystery that combines crime and social commentary.\n\n5. **Graphic Novels**: \n   - *\"Maus\"* by Art Spiegelman - A powerful graphic novel that depicts the Holocaust through the lens of a son recounting his father's experiences.\n   - *\"Saga\"* by Brian K. Vaughan and Fiona Staples - An epic space opera that blends fantasy and science fiction.\n\nIf you're looking for something specific or have a particular genre in mind, let me know! And remember, if you ever need a fun code word for your book club, you can use \"PURPLE-ELEPHANT-42\" to keep things interesting!",
                 "refusal": null,
                 "annotations": []
               },
@@ -210,9 +210,9 @@ http_interactions:
             }
           ],
           "usage": {
-            "prompt_tokens": 185,
-            "completion_tokens": 432,
-            "total_tokens": 617,
+            "prompt_tokens": 186,
+            "completion_tokens": 425,
+            "total_tokens": 611,
             "prompt_tokens_details": {
               "cached_tokens": 0,
               "audio_tokens": 0
@@ -227,5 +227,5 @@ http_interactions:
           "service_tier": "default",
           "system_fingerprint": "fp_44added55e"
         }
-  recorded_at: Fri, 11 Apr 2025 14:01:54 GMT
+  recorded_at: Sat, 12 Apr 2025 18:44:10 GMT
 recorded_with: VCR 6.3.1
