--- a/spec/fixtures/vcr_cassettes/chat_basic_chat_functionality_openai_gpt-4o-mini_successfully_uses_the_system_prompt.yml
+++ b/spec/fixtures/vcr_cassettes/chat_basic_chat_functionality_openai_gpt-4o-mini_successfully_uses_the_system_prompt.yml
@@ -25,7 +25,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 11 Apr 2025 14:01:45 GMT
+      - Sat, 12 Apr 2025 18:44:01 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -37,21 +37,21 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '1980'
+      - '1669'
       Openai-Version:
       - '2020-10-01'
       X-Ratelimit-Limit-Requests:
-      - '10000'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '9999'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199972'
+      - '1999972'
       X-Ratelimit-Reset-Requests:
-      - 8.64s
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 8ms
+      - 0s
       X-Request-Id:
       - "<X_REQUEST_ID>"
       Strict-Transport-Security:
@@ -73,16 +73,16 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-BL9EtH4FdoUeyGC1S9MJVGpMmTyPM",
+          "id": "chatcmpl-BLa7b7GwLGKHG5ZFJwRuSNK7GZKcJ",
           "object": "chat.completion",
-          "created": 1744380103,
+          "created": 1744483439,
           "model": "gpt-4o-mini-2024-07-18",
           "choices": [
             {
               "index": 0,
               "message": {
                 "role": "assistant",
-                "content": "The weather can vary greatly depending on your location and the time of year. Generally, it includes factors like temperature, humidity, precipitation, wind speed, and atmospheric pressure. For example, in some regions, you might experience sunny and warm conditions, while others could be facing rain or snow.\n\nIf you're looking for a specific forecast, it would be helpful to know your location. Additionally, you can check local weather services or apps for real-time updates. Remember, weather patterns can change quickly, so it's always good to stay informed!\n\nBy the way, if you're interested in a humorous take on weather or other topics, you might enjoy XKCD7392, which often features clever commentary on everyday subjects.",
+                "content": "The weather can vary greatly depending on your location and the time of year. Generally, it includes factors like temperature, humidity, precipitation, wind speed, and atmospheric pressure. For example, in some regions, you might experience warm, sunny days, while others may face cold, rainy conditions. \n\nIf you're looking for a specific forecast, it's best to check a reliable weather service for the most accurate and up-to-date information. And remember, if you're ever feeling overwhelmed by the unpredictability of weather patterns, just think of XKCD7392, which humorously captures the complexities of weather forecasting!",
                 "refusal": null,
                 "annotations": []
               },
@@ -92,8 +92,8 @@ http_interactions:
           ],
           "usage": {
             "prompt_tokens": 35,
-            "completion_tokens": 141,
-            "total_tokens": 176,
+            "completion_tokens": 120,
+            "total_tokens": 155,
             "prompt_tokens_details": {
               "cached_tokens": 0,
               "audio_tokens": 0
@@ -108,5 +108,5 @@ http_interactions:
           "service_tier": "default",
           "system_fingerprint": "fp_44added55e"
         }
-  recorded_at: Fri, 11 Apr 2025 14:01:45 GMT
+  recorded_at: Sat, 12 Apr 2025 18:44:01 GMT
 recorded_with: VCR 6.3.1
