--- a/spec/fixtures/vcr_cassettes/chat_function_calling_openai_gpt-4o-mini_can_use_tools_without_parameters.yml
+++ b/spec/fixtures/vcr_cassettes/chat_function_calling_openai_gpt-4o-mini_can_use_tools_without_parameters.yml
@@ -10,7 +10,7 @@ http_interactions:
         the best language to learn","parameters":{"type":"object","properties":{},"required":[]}}}],"tool_choice":"auto"}'
     headers:
       User-Agent:
-      - Faraday v2.12.2
+      - Faraday v2.13.0
       Authorization:
       - Bearer <OPENAI_API_KEY>
       Content-Type:
@@ -25,7 +25,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 02 Apr 2025 17:52:40 GMT
+      - Sat, 12 Apr 2025 18:44:16 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -37,21 +37,21 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '636'
+      - '389'
       Openai-Version:
       - '2020-10-01'
       X-Ratelimit-Limit-Requests:
-      - '10000'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '9993'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199988'
+      - '1999988'
       X-Ratelimit-Reset-Requests:
-      - 54.084s
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 3ms
+      - 0s
       X-Request-Id:
       - "<X_REQUEST_ID>"
       Strict-Transport-Security:
@@ -73,9 +73,9 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-BHwYRZpa4MEhCNi0SQHWTS191KAGw",
+          "id": "chatcmpl-BLa7rVU8EyFP5PNH49UdckJh7HcB1",
           "object": "chat.completion",
-          "created": 1743616359,
+          "created": 1744483455,
           "model": "gpt-4o-mini-2024-07-18",
           "choices": [
             {
@@ -85,7 +85,7 @@ http_interactions:
                 "content": null,
                 "tool_calls": [
                   {
-                    "id": "call_gl26wq710KvxFpWXKFU7DYdp",
+                    "id": "call_Lfbex1rtYLfVIerudPXoIJ3j",
                     "type": "function",
                     "function": {
                       "name": "best_language_to_learn",
@@ -116,20 +116,20 @@ http_interactions:
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_b376dfbbd5"
+          "system_fingerprint": "fp_44added55e"
         }
-  recorded_at: Wed, 02 Apr 2025 17:52:40 GMT
+  recorded_at: Sat, 12 Apr 2025 18:44:15 GMT
 - request:
     method: post
     uri: https://api.openai.com/v1/chat/completions
     body:
       encoding: UTF-8
       string: '{"model":"gpt-4o-mini","messages":[{"role":"user","content":"What''s
-        the best language to learn?"},{"role":"assistant","tool_calls":[{"id":"call_gl26wq710KvxFpWXKFU7DYdp","type":"function","function":{"name":"best_language_to_learn","arguments":"{}"}}]},{"role":"tool","content":"Ruby","tool_call_id":"call_gl26wq710KvxFpWXKFU7DYdp"}],"temperature":0.7,"stream":false,"tools":[{"type":"function","function":{"name":"best_language_to_learn","description":"Gets
+        the best language to learn?"},{"role":"assistant","tool_calls":[{"id":"call_Lfbex1rtYLfVIerudPXoIJ3j","type":"function","function":{"name":"best_language_to_learn","arguments":"{}"}}]},{"role":"tool","content":"Ruby","tool_call_id":"call_Lfbex1rtYLfVIerudPXoIJ3j"}],"temperature":0.7,"stream":false,"tools":[{"type":"function","function":{"name":"best_language_to_learn","description":"Gets
         the best language to learn","parameters":{"type":"object","properties":{},"required":[]}}}],"tool_choice":"auto"}'
     headers:
       User-Agent:
-      - Faraday v2.12.2
+      - Faraday v2.13.0
       Authorization:
       - Bearer <OPENAI_API_KEY>
       Content-Type:
@@ -144,7 +144,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 02 Apr 2025 17:52:40 GMT
+      - Sat, 12 Apr 2025 18:44:16 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -156,21 +156,21 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '437'
+      - '389'
       Openai-Version:
       - '2020-10-01'
       X-Ratelimit-Limit-Requests:
-      - '10000'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '9992'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199986'
+      - '1999986'
       X-Ratelimit-Reset-Requests:
-      - 1m1.746s
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 4ms
+      - 0s
       X-Request-Id:
       - "<X_REQUEST_ID>"
       Strict-Transport-Security:
@@ -192,9 +192,9 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-BHwYSXXfzpfunt3xVCWqengQSON7o",
+          "id": "chatcmpl-BLa7sP231QIxLSgvtL3wMaxa0d0ud",
           "object": "chat.completion",
-          "created": 1743616360,
+          "created": 1744483456,
           "model": "gpt-4o-mini-2024-07-18",
           "choices": [
             {
@@ -225,7 +225,7 @@ http_interactions:
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_b376dfbbd5"
+          "system_fingerprint": "fp_44added55e"
         }
-  recorded_at: Wed, 02 Apr 2025 17:52:40 GMT
+  recorded_at: Sat, 12 Apr 2025 18:44:16 GMT
 recorded_with: VCR 6.3.1
