--- a/spec/fixtures/vcr_cassettes/chat_streaming_responses_openai_gpt-4o-mini_supports_streaming_responses.yml
+++ b/spec/fixtures/vcr_cassettes/chat_streaming_responses_openai_gpt-4o-mini_supports_streaming_responses.yml
@@ -9,7 +9,7 @@ http_interactions:
         from 1 to 3"}],"temperature":0.7,"stream":true,"stream_options":{"include_usage":true}}'
     headers:
       User-Agent:
-      - Faraday v2.12.2
+      - Faraday v2.13.0
       Authorization:
       - Bearer <OPENAI_API_KEY>
       Content-Type:
@@ -24,7 +24,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 02 Apr 2025 17:50:26 GMT
+      - Sat, 12 Apr 2025 18:44:10 GMT
       Content-Type:
       - text/event-stream; charset=utf-8
       Transfer-Encoding:
@@ -36,21 +36,21 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '265'
+      - '261'
       Openai-Version:
       - '2020-10-01'
       X-Ratelimit-Limit-Requests:
-      - '10000'
+      - '5000'
       X-Ratelimit-Limit-Tokens:
-      - '200000'
+      - '2000000'
       X-Ratelimit-Remaining-Requests:
-      - '9996'
+      - '4999'
       X-Ratelimit-Remaining-Tokens:
-      - '199992'
+      - '1999993'
       X-Ratelimit-Reset-Requests:
-      - 29.574s
+      - 12ms
       X-Ratelimit-Reset-Tokens:
-      - 2ms
+      - 0s
       X-Request-Id:
       - "<X_REQUEST_ID>"
       Strict-Transport-Security:
@@ -71,30 +71,28 @@ http_interactions:
     body:
       encoding: UTF-8
       string: |+
-        data: {"id":"chatcmpl-BHwWI9J6fBnd2pEspnIciga7vaEls","object":"chat.completion.chunk","created":1743616226,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_b376dfbbd5","choices":[{"index":0,"delta":{"role":"assistant","content":"","refusal":null},"logprobs":null,"finish_reason":null}],"usage":null}
+        data: {"id":"chatcmpl-BLa7mQTKNMLvm29lWlVl6QxP6Xmb7","object":"chat.completion.chunk","created":1744483450,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_f7d56a8a2c","choices":[{"index":0,"delta":{"role":"assistant","content":"","refusal":null},"logprobs":null,"finish_reason":null}],"usage":null}
 
-        data: {"id":"chatcmpl-BHwWI9J6fBnd2pEspnIciga7vaEls","object":"chat.completion.chunk","created":1743616226,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_b376dfbbd5","choices":[{"index":0,"delta":{"content":"1"},"logprobs":null,"finish_reason":null}],"usage":null}
+        data: {"id":"chatcmpl-BLa7mQTKNMLvm29lWlVl6QxP6Xmb7","object":"chat.completion.chunk","created":1744483450,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_f7d56a8a2c","choices":[{"index":0,"delta":{"content":"1"},"logprobs":null,"finish_reason":null}],"usage":null}
 
-        data: {"id":"chatcmpl-BHwWI9J6fBnd2pEspnIciga7vaEls","object":"chat.completion.chunk","created":1743616226,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_b376dfbbd5","choices":[{"index":0,"delta":{"content":","},"logprobs":null,"finish_reason":null}],"usage":null}
+        data: {"id":"chatcmpl-BLa7mQTKNMLvm29lWlVl6QxP6Xmb7","object":"chat.completion.chunk","created":1744483450,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_f7d56a8a2c","choices":[{"index":0,"delta":{"content":","},"logprobs":null,"finish_reason":null}],"usage":null}
 
-        data: {"id":"chatcmpl-BHwWI9J6fBnd2pEspnIciga7vaEls","object":"chat.completion.chunk","created":1743616226,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_b376dfbbd5","choices":[{"index":0,"delta":{"content":" "},"logprobs":null,"finish_reason":null}],"usage":null}
+        data: {"id":"chatcmpl-BLa7mQTKNMLvm29lWlVl6QxP6Xmb7","object":"chat.completion.chunk","created":1744483450,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_f7d56a8a2c","choices":[{"index":0,"delta":{"content":" "},"logprobs":null,"finish_reason":null}],"usage":null}
 
-        data: {"id":"chatcmpl-BHwWI9J6fBnd2pEspnIciga7vaEls","object":"chat.completion.chunk","created":1743616226,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_b376dfbbd5","choices":[{"index":0,"delta":{"content":"2"},"logprobs":null,"finish_reason":null}],"usage":null}
+        data: {"id":"chatcmpl-BLa7mQTKNMLvm29lWlVl6QxP6Xmb7","object":"chat.completion.chunk","created":1744483450,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_f7d56a8a2c","choices":[{"index":0,"delta":{"content":"2"},"logprobs":null,"finish_reason":null}],"usage":null}
 
-        data: {"id":"chatcmpl-BHwWI9J6fBnd2pEspnIciga7vaEls","object":"chat.completion.chunk","created":1743616226,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_b376dfbbd5","choices":[{"index":0,"delta":{"content":","},"logprobs":null,"finish_reason":null}],"usage":null}
+        data: {"id":"chatcmpl-BLa7mQTKNMLvm29lWlVl6QxP6Xmb7","object":"chat.completion.chunk","created":1744483450,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_f7d56a8a2c","choices":[{"index":0,"delta":{"content":","},"logprobs":null,"finish_reason":null}],"usage":null}
 
-        data: {"id":"chatcmpl-BHwWI9J6fBnd2pEspnIciga7vaEls","object":"chat.completion.chunk","created":1743616226,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_b376dfbbd5","choices":[{"index":0,"delta":{"content":" "},"logprobs":null,"finish_reason":null}],"usage":null}
+        data: {"id":"chatcmpl-BLa7mQTKNMLvm29lWlVl6QxP6Xmb7","object":"chat.completion.chunk","created":1744483450,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_f7d56a8a2c","choices":[{"index":0,"delta":{"content":" "},"logprobs":null,"finish_reason":null}],"usage":null}
 
-        data: {"id":"chatcmpl-BHwWI9J6fBnd2pEspnIciga7vaEls","object":"chat.completion.chunk","created":1743616226,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_b376dfbbd5","choices":[{"index":0,"delta":{"content":"3"},"logprobs":null,"finish_reason":null}],"usage":null}
+        data: {"id":"chatcmpl-BLa7mQTKNMLvm29lWlVl6QxP6Xmb7","object":"chat.completion.chunk","created":1744483450,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_f7d56a8a2c","choices":[{"index":0,"delta":{"content":"3"},"logprobs":null,"finish_reason":null}],"usage":null}
 
-        data: {"id":"chatcmpl-BHwWI9J6fBnd2pEspnIciga7vaEls","object":"chat.completion.chunk","created":1743616226,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_b376dfbbd5","choices":[{"index":0,"delta":{"content":"."},"logprobs":null,"finish_reason":null}],"usage":null}
+        data: {"id":"chatcmpl-BLa7mQTKNMLvm29lWlVl6QxP6Xmb7","object":"chat.completion.chunk","created":1744483450,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_f7d56a8a2c","choices":[{"index":0,"delta":{},"logprobs":null,"finish_reason":"stop"}],"usage":null}
 
-        data: {"id":"chatcmpl-BHwWI9J6fBnd2pEspnIciga7vaEls","object":"chat.completion.chunk","created":1743616226,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_b376dfbbd5","choices":[{"index":0,"delta":{},"logprobs":null,"finish_reason":"stop"}],"usage":null}
-
-        data: {"id":"chatcmpl-BHwWI9J6fBnd2pEspnIciga7vaEls","object":"chat.completion.chunk","created":1743616226,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_b376dfbbd5","choices":[],"usage":{"prompt_tokens":14,"completion_tokens":9,"total_tokens":23,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0}}}
+        data: {"id":"chatcmpl-BLa7mQTKNMLvm29lWlVl6QxP6Xmb7","object":"chat.completion.chunk","created":1744483450,"model":"gpt-4o-mini-2024-07-18","service_tier":"default","system_fingerprint":"fp_f7d56a8a2c","choices":[],"usage":{"prompt_tokens":14,"completion_tokens":8,"total_tokens":22,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0}}}
 
         data: [DONE]
 
-  recorded_at: Wed, 02 Apr 2025 17:50:26 GMT
+  recorded_at: Sat, 12 Apr 2025 18:44:10 GMT
 recorded_with: VCR 6.3.1
 ...
