--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -13,6 +13,8 @@
       url: /guides/tools
     - title: Streaming
       url: /guides/streaming
+    - title: Prompt Caching
+      url: /guides/prompt-caching
     - title: Rails Integration
       url: /guides/rails
     - title: Image Generation
